--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
   <body>
     <header>
       <h1>Trivia Questions</h1>
-    </header>
-    <section class="centered">
-      <form>
-        <button type="submit">Get New Questions</button>
-      </form>
+   </header>
+    <section class="centered" id="b">
+      <!-- <form class="a" id="a"> -->
+        <button class="enterButton" id="enterButton">Get New Questions</button>
+      <!-- </form> -->
     </section>
-    <main class="centered">
+    <main class="center" id="quest">
+     
       <!-- Your `.card` elements should show up here. -->
     </main>
+    <script async src="app.js"></script>
   </body>
 </html>
